[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/Rabbit.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/grama_com_borda.png" type="Texture" id=2]
[ext_resource path="res://levels/Level1.gd" type="Script" id=3]
[ext_resource path="res://images/coracao_cheio.png" type="Texture" id=4]
[ext_resource path="res://images/coracao_vazio.png" type="Texture" id=5]
[ext_resource path="res://images/botao_pause.png" type="Texture" id=6]
[ext_resource path="res://sounds/level1.ogg" type="AudioStream" id=7]
[ext_resource path="res://images/botao_pause_selecionado.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 794.461, 3.54973 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 901.831, 7.17249 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 501.669, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 526.337, 4.83594 )

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Node" parent="."]

[node name="Background1" type="Sprite" parent="Background"]
position = Vector2( -112, -1280 )
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Background2" type="Sprite" parent="Background"]
position = Vector2( -112, 0 )
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Background3" type="Sprite" parent="Background"]
position = Vector2( -112, 1280 )
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Walls" type="Node" parent="."]

[node name="wall_01" type="StaticBody2D" parent="Walls"]
position = Vector2( -3.50798, -0.0338593 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Walls/wall_01"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="wall_02" type="StaticBody2D" parent="Walls"]
position = Vector2( 727.101, 637.224 )
rotation = 1.5708
scale = Vector2( 0.805342, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Walls/wall_02"]
shape = SubResource( 2 )

[node name="wall_03" type="StaticBody2D" parent="Walls"]
position = Vector2( 369.776, -8.42703 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/wall_03"]
shape = SubResource( 3 )

[node name="wall_04" type="StaticBody2D" parent="Walls" groups=[
"bottom_wall",
]]
position = Vector2( 372.598, 1284.77 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/wall_04"]
shape = SubResource( 4 )

[node name="Rabbit" parent="." instance=ExtResource( 1 )]
position = Vector2( 379.899, 1135.17 )

[node name="Hearts" type="Node" parent="."]

[node name="Heart_01" type="Sprite" parent="Hearts"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
centered = false

[node name="Heart_02" type="Sprite" parent="Hearts"]
position = Vector2( 80, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
centered = false

[node name="Heart_03" type="Sprite" parent="Hearts"]
position = Vector2( 160, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
centered = false

[node name="Back_01" type="Sprite" parent="Hearts"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
normal_map = ExtResource( 4 )
centered = false

[node name="Back_02" type="Sprite" parent="Hearts"]
position = Vector2( 80, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
normal_map = ExtResource( 4 )
centered = false

[node name="Back_03" type="Sprite" parent="Hearts"]
position = Vector2( 160, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
normal_map = ExtResource( 4 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Enemies" type="Node" parent="."]

[node name="PauseUI" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )
z_index = 1

[node name="PauseButton" type="TextureButton" parent="PauseUI"]
margin_left = 3195.06
margin_top = 5.01563
margin_right = 3595.06
margin_bottom = 405.016
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseUI"]
visible = false
margin_left = 498.691
margin_top = 1538.26
margin_right = 3179.69
margin_bottom = 4384.26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelEndTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true
